syntax = "proto3";

package service.contract;

option go_package = "github.com/korol8484/shortener/internal/app/grpc/service/contract";

import "proto/service/contract/entity.proto";

message ResponseShort {
    string data = 1;
}

message ResponseBatch {
    repeated Batch batch = 1;
}

message ResponseUserUrl {
    repeated Url url = 1;
}

message ResponseStats {
    int64 urls = 1;
    int64 users = 2;
}
